<resources>
  <string name="app_name">구질구질한 알림</string>

  <string name="all_finish">완료</string>
  <string name="all_ok">OK</string>
  <string name="all_am">AM</string>
  <string name="all_pm">PM</string>
  <string-array name="all_weekday">
    <item>월</item>
    <item>화</item>
    <item>수</item>
    <item>목</item>
    <item>금</item>
    <item>토</item>
    <item>일</item>
  </string-array>

  <string name="task_detail_label">추가</string>
  <string name="task_detail_title">제목</string>
  <string name="task_detail_desc">설명</string>
  <string name="task_detail_time">시간</string>
  <string name="task_detail_date">날짜</string>
  <string name="task_detail_repeat">반복</string>
  <string name="task_detail_condition">반복조건</string>
  <string name="task_detail_rank">중요도</string>
  <string name="task_detail_rank_desc">중요도에 따라 알림의 개수가 변경됩니다.</string>
  <string name="task_detail_max">최대 20자까지 입력 가능합니다.</string>
  <string name="task_priority_high">높음</string>
  <string name="task_priority_middle">중간</string>
  <string name="task_priority_low">낮음</string>
  <string name="task_priority_push_time">알림 받는 시간</string>
  <string name="task_detail_empty">비어있습니다.</string>
  <string name="task_detail_error">할 일 추가에 실패했습니다. 다시 시도해주세요.</string>
  <string name="task_detail_push_time">알림 받는 시간</string>

  <string name="task_detail_day">매일</string>
  <string name="task_detail_week">매주</string>
  <string name="task_detail_month">매월</string>
  <string name="task_detail_routine">마다 반</string>

  <string name="format_datetime">%d월 %d일 (%s) %s %d:%02d</string>
  <string name="format_time_before">%d시간 전</string>
  <string name="format_time_after">%d시간 후</string>
</resources>