<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@android:color/black"
  android:orientation="vertical"
  android:paddingStart="20dp">

  <ImageButton
    android:id="@+id/ib_dialog_close"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:layout_margin="20dp"
    android:background="@android:color/transparent"
    android:src="@drawable/ic_close" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/tv_dialog_year"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="13dp"
      android:text="2017"
      android:textColor="@android:color/white"
      android:textSize="16sp" />

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/color_darker_gray" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="18dp"
    android:gravity="center"
    android:orientation="horizontal">

    <Button
      android:id="@+id/btn_dialog_date"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="10dp"
      android:background="@drawable/back_orange_btn"
      android:paddingStart="10dp"
      android:paddingEnd="10dp"
      android:text="4.3(목)"
      android:textColor="@android:color/white"
      android:textSize="28sp"
      android:textStyle="bold" />

    <Button
      android:id="@+id/btn_dialog_time"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:background="@android:color/transparent"
      android:paddingStart="10dp"
      android:paddingEnd="10dp"
      android:text="3:30 PM"
      android:textColor="@android:color/white"
      android:textSize="28sp"
      android:textStyle="bold" />

  </LinearLayout>

  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20dp">

    <CalendarView
      android:id="@+id/cal_dialog"
      style="@style/CalenderViewCustom"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

    <FrameLayout
      android:id="@+id/layout_dialog_time"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:visibility="gone">

      <TimePicker
        android:id="@+id/tp_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:numbersSelectorColor="@color/colorPrimary" />

      <Button
        android:id="@+id/btn_dialog_am"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_gravity="bottom"
        android:layout_margin="43dp"
        android:background="@drawable/back_gray_btn"
        android:text="@string/all_am"
        android:textColor="@android:color/white" />

      <Button
        android:id="@+id/btn_dialog_pm"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_gravity="end|bottom"
        android:layout_margin="43dp"
        android:background="@drawable/back_darker_gray_btn"
        android:text="@string/all_pm"
        android:textColor="@android:color/white" />
    </FrameLayout>
  </FrameLayout>

  <Button
    android:id="@+id/btn_dialog_ok"
    android:layout_width="43dp"
    android:layout_height="43dp"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/back_darker_gray_btn"
    android:text="@string/all_ok"
    android:textColor="@android:color/white" />
</LinearLayout>